added: functionto load correctly, cosphi shiftingto thecentre, fixed plots plotly

--- a/b1_map_CH9.ipynb
+++ b/b1_map_CH9.ipynb
@@ -27,6 +27,8 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "\n",
+    "from __future__ import division\n",
+    "\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
     "#to see which classes have been defined so far\n",
@@ -54,10 +56,10 @@
     "\n",
     "k=fileRCR[loc].keys()\n",
     "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
-    "dict(fileRCR[loc]) # keys : values\n",
+    "dict(fileRCR[loc]); # keys : values\n",
     "check = fileRCR[loc+\"/MFPAD3D_engate_costheta_-1.00_phi_-180\"]\n",
     "type(check)\n",
-    "check._members()"
+    "check._members();"
    ]
   },
   {
@@ -67,7 +69,7 @@
    "outputs": [],
    "source": [
     "b=check.numpy()\n",
-    "type(b)\n",
+    "print(type(b))\n",
     "b"
    ]
   },
@@ -98,34 +100,84 @@
     "    cosphi.append((ctheta_nc, phi_nc))\n",
     "    return cosphi\n",
     "\n",
-    "def import_MFPAD(file, MFPAD, cosphi, MFPAD_xy, ctetha, ctheta_c, ctheta_cred, run_one=0):\n",
+    "def shift_func(a, flag=0.):\n",
+    "    if a.shape[0]>12:\n",
+    "        c=a.reshape(12,6)\n",
+    "        flag=1.\n",
+    "        if c[0][0] == c[0][1]:\n",
+    "            b=(c[1][0]-c[0][0])/2\n",
+    "            a=np.add(c,b)\n",
+    "        else:\n",
+    "            b=(c[0][1]-c[0][0])/2\n",
+    "            a=np.add(c,b)\n",
+    "    else:\n",
+    "        if a[0][0] == a[0][1]:\n",
+    "            b=(a[1][0]-a[0][0])/2\n",
+    "            a=np.add(a,b)\n",
+    "        else:\n",
+    "            b=(a[0][1]-a[0][0])/2\n",
+    "            a=np.add(a,b)\n",
+    "    if flag == 1.:\n",
+    "        # a=np.ravel(a)\n",
+    "        a=a.reshape(-1)\n",
+    "    return a\n",
+    "\n",
+    "def import_MFPAD(file, MFPAD, cosphi, MFPAD_xy, ctheta, ctheta_c, ctheta_cred, run_MFPAD=0., run_cos=0.):\n",
     "    \"\"\"\n",
     "    Loads the MFPADs and the cos(theta) from the .root files.\n",
     "    6 inputs + a parameter\n",
-    "    NOTE: MFPAD_xy and ctheta have originally +1 dimensions compare to the z values.\n",
+    "    NOTE: MFPAD_xy and ctheta_c have originally +1 dimensions compare to the z values.\n",
     "    For the sake of iminiut, cos(theta) is centered on the middle of the bins.\n",
     "    \"\"\"\n",
     "    for key, value in file[loc].items():\n",
     "        filename=loc+\"/\"+str(key).split(\";\")[0].replace(\"b'\",\"\")\n",
     "        if \"mfpad3d_engate_costheta\" in filename.lower():\n",
-    "            # print(filename)\n",
     "            cosphi=cosphi_func(key,cosphi)\n",
     "            temp=np.array(file[filename].numpy())\n",
     "            MFPAD.append(temp[0]) # it is a list!\n",
-    "            if run_one == 0:\n",
+    "            if run_MFPAD == 0.:\n",
     "                MFPAD_xy.append((temp[1][0][0] , temp[1][0][1])) # phi cos(theta) from 2D\n",
-    "                run_one=1\n",
+    "                run_MFPAD=1.\n",
     "        elif \"cos(theta)\" in filename.lower():\n",
     "            temp=np.array(file[filename].numpy())\n",
-    "            ctetha.append(temp[0]) # it is a list!\n",
-    "            if run_one == 0:\n",
-    "                ctheta_c = temp[1] # cos(theta) from 1D\n",
-    "                ctheta_cred=np.array((ctetha_c[1:] + ctetha_c[:-1])/2) #! NOTE: reduced of 1 dimension\n",
-    "                run_one=1\n",
-    "    MFPAD=np.array(MFPAD)\n",
-    "    cosphi=np.array(cosphi)\n",
-    "    MFPAD_xy=np.array(MFPAD_xy) # if it should be reduced of 1 dimension use #reduced of 1 dimension\n",
-    "    ctetha=np.array(ctetha)"
+    "            ctheta.append(temp[0]) # it is a list!\n",
+    "            if run_cos == 0.:\n",
+    "                ctheta_c.append(temp[1])\n",
+    "                ctheta_cred.append(np.array((ctheta_c[0][1:] + ctheta_c[0][:-1])/2)) #! reduced of 1 dimension\n",
+    "                run_cos=1.\n",
+    "    return MFPAD, cosphi, MFPAD_xy, ctheta, ctheta_c, ctheta_cred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# initilialises a list\n",
+    "MFPAD_RCR=[]; ctheta_RCR=[]; ctheta_xaxis_RCR=[]; cosphi_RCR=[];\n",
+    "MFPAD_RCL=[]; ctheta_RCL=[]; ctheta_xaxis_RCL=[]; cosphi_RCL=[];\n",
+    "MFPAD_SCR=[]; ctheta_SCR=[]; ctheta_xaxis_SCR=[]; cosphi_SCR=[];\n",
+    "MFPAD_SCL=[]; ctheta_SCL=[]; ctheta_xaxis_SCL=[]; cosphi_SCL=[];\n",
+    "\n",
+    "MFPAD_xy=[];\n",
+    "ctheta_cred=[];\n",
+    "\n",
+    "import_MFPAD(fileRCR, MFPAD_RCR, cosphi_RCR, MFPAD_xy, ctheta_RCR, ctheta_xaxis_RCR, ctheta_cred)\n",
+    "import_MFPAD(fileRCL, MFPAD_RCL, cosphi_RCL, MFPAD_xy, ctheta_RCL, ctheta_xaxis_RCL, ctheta_cred)\n",
+    "import_MFPAD(fileSCR, MFPAD_SCR, cosphi_SCR, MFPAD_xy, ctheta_SCR, ctheta_xaxis_SCR, ctheta_cred)\n",
+    "import_MFPAD(fileSCL, MFPAD_SCL, cosphi_SCL, MFPAD_xy, ctheta_SCL, ctheta_xaxis_SCL, ctheta_cred)\n",
+    "\n",
+    "# converting into nparray\n",
+    "MFPAD_RCR=np.array(MFPAD_RCR); ctheta_RCR=np.array(ctheta_RCR); ctheta_xaxis_RCR=np.array(ctheta_xaxis_RCR[0]); cosphi_RCR=np.array(cosphi_RCR);\n",
+    "MFPAD_RCL=np.array(MFPAD_RCL); ctheta_RCL=np.array(ctheta_RCL); ctheta_xaxis_RCL=np.array(ctheta_xaxis_RCL[0]); cosphi_RCL=np.array(cosphi_RCL);\n",
+    "MFPAD_SCR=np.array(MFPAD_SCR); ctheta_SCR=np.array(ctheta_SCR); ctheta_xaxis_SCR=np.array(ctheta_xaxis_SCR[0]); cosphi_SCR=np.array(cosphi_SCR);\n",
+    "MFPAD_SCL=np.array(MFPAD_SCL); ctheta_SCL=np.array(ctheta_SCL); ctheta_xaxis_SCL=np.array(ctheta_xaxis_SCL[0]); cosphi_SCL=np.array(cosphi_SCL);\n",
+    "\n",
+    "ctheta_cred=ctheta_cred[0];\n",
+    "cosphi=cosphi_RCR;"
    ]
   },
   {
@@ -134,26 +186,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initilialises a list\n",
-    "MFPAD_RCR=[]; ctetha_RCR=[]; ctheta_xaxis_RCR=[]\n",
-    "MFPAD_RCL=[]; ctetha_RCL=[]; ctheta_xaxis_RCL=[]\n",
-    "MFPAD_SCR=[]; ctetha_SCR=[]; ctheta_xaxis_SCR=[]\n",
-    "MFPAD_SCL=[]; ctetha_SCL=[]; ctheta_xaxis_SCL=[]\n",
-    "\n",
-    "cosphi=[]\n",
-    "MFPAD_xy=[]\n",
-    "ctheta_cred=[]\n",
-    "\n",
-    "import_MFPAD(fileRCR, MFPAD_RCR, cosphi, MFPAD_xy, ctetha_RCR, ctheta_xaxis_RCR, ctheta_cred, run_one=0)\n",
-    "import_MFPAD(fileRCL, MFPAD_RCL, cosphi, MFPAD_xy, ctetha_RCL, ctheta_xaxis_RCL, ctheta_cred, run_one=0)\n",
-    "import_MFPAD(fileSCR, MFPAD_SCR, cosphi, MFPAD_xy, ctetha_SCR, ctheta_xaxis_SCR, ctheta_cred, run_one=0)\n",
-    "import_MFPAD(fileSCL, MFPAD_SCL, cosphi, MFPAD_xy, ctetha_SCL, ctheta_xaxis_SCL, ctheta_cred, run_one=0)\n",
-    "\n",
-    "# converting into nparray\n",
-    "MFPAD_RCR=np.array(MFPAD_RCR); ctetha_RCR=np.array(ctetha_RCR); ctheta_xaxis_RCR=np.array(ctheta_xaxis_RCR)\n",
-    "MFPAD_RCL=np.array(MFPAD_RCL); ctetha_RCL=np.array(ctetha_RCL); ctheta_xaxis_RCL=np.array(ctheta_xaxis_RCL)\n",
-    "MFPAD_SCR=np.array(MFPAD_SCR); ctetha_SCR=np.array(ctetha_SCR); ctheta_xaxis_SCR=np.array(ctheta_xaxis_SCR)\n",
-    "MFPAD_SCL=np.array(MFPAD_SCL); ctetha_SCL=np.array(ctetha_SCL); ctheta_xaxis_SCL=np.array(ctheta_xaxis_SCL)"
+    "# print(ctheta_xaxis_RCR, \"\\n\")\n",
+    "# print(ctheta_cred, \"\\n\")\n",
+    "# print(cosphi.shape[1], \"\\n\")\n",
+    "# print(cosphi[:,1].reshape(12,6), \"\\n\")\n",
+    "print(shift_func(cosphi[:,1].reshape(12,6)), \"\\n\")\n",
+    "print(shift_func(cosphi[:,0].reshape(12,6)), \"\\n\")\n",
+    "print(shift_func(cosphi[:,1]), \"\\n\")\n",
+    "print(shift_func(cosphi[:,0]))"
    ]
   },
   {
@@ -201,8 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.array(ctetha_RCR).shape)\n",
-    "ctetha_RCR"
+    "print(np.array(ctheta_RCR).shape)\n",
+    "ctheta_RCR"
    ]
   },
   {
@@ -213,8 +253,8 @@
    },
    "outputs": [],
    "source": [
-    "print(ctetha_RCR[0].shape)\n",
-    "ctetha_RCR[0]"
+    "print(ctheta_RCR[0].shape)\n",
+    "ctheta_RCR[0]"
    ]
   },
   {
@@ -223,34 +263,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cPECD_norm =  np.divide(np.subtract(ctetha_RCR/ctetha_RCR.sum(axis=1)[:,np.newaxis],ctetha_RCL/ctetha_RCL.sum(axis=1)[:,np.newaxis]),np.add(ctetha_RCR/ctetha_RCR.sum(axis=1)[:,np.newaxis],ctetha_RCL/ctetha_RCL.sum(axis=1)[:,np.newaxis]))\n",
+    "cPECD_norm =  np.divide(np.subtract(ctheta_RCR/ctheta_RCR.sum(axis=1)[:,np.newaxis],ctheta_RCL/ctheta_RCL.sum(axis=1)[:,np.newaxis]),np.add(ctheta_RCR/ctheta_RCR.sum(axis=1)[:,np.newaxis],ctheta_RCL/ctheta_RCL.sum(axis=1)[:,np.newaxis]))\n",
     "\n",
-    "cPECD =  np.divide(np.subtract(ctetha_RCR,ctetha_RCL),np.add(ctetha_RCR,ctetha_RCL))\n",
+    "cPECD =  np.divide(np.subtract(ctheta_RCR,ctheta_RCL),np.add(ctheta_RCR,ctheta_RCL))\n",
     "\n",
     "# from the statistical book var = sqrt(1/Ntot)\n",
     "\n",
-    "errPECD = np.sqrt(1/(ctetha_RCR+ctetha_RCL))\n",
+    "errPECD = np.sqrt(1/(ctheta_RCR+ctheta_RCL))\n",
     "\n",
     "print(cPECD.shape)\n",
+    "print(cPECD_norm.shape)\n",
     "print(cPECD_norm[0].shape)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(ctheta_xaxis_RCR.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(ctetha_RCR[0],cPECD_norm[0])"
+    "plt.scatter(ctheta_cred,cPECD_norm[0])"
    ]
   },
   {
@@ -425,7 +455,7 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.2,0.2)\n",
     "\n",
-    "for i in range(len(cosphi)): # len = 72\n",
+    "for i in range(72): #fixe because of the photon directions, equal to range(len(cosphi))\n",
     "    #print(i)\n",
     "    x_data = ctheta_cred\n",
     "    y_data = cPECD_norm[i]\n",
@@ -467,15 +497,7 @@
    "outputs": [],
    "source": [
     "import pprint\n",
-    "pprint.pprint(param_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pprint.pprint(param_matrix)\n",
     "len(m.parameters)"
    ]
   },
@@ -485,8 +507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test2=[col[0] for col in param_matrix] #list\n",
-    "b1=[col[0] for col in test2]"
+    "test2=[col[0] for col in param_matrix]; #list\n",
+    "b1=[col[0] for col in test2];"
    ]
   },
   {
@@ -495,18 +517,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test=np.array(param_matrix) #numpy\n",
-    "b1 = test[0,:,0]\n",
-    "b2 = test[1,:,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b1[1]"
+    "param_matrix=np.array(param_matrix) #numpy\n",
+    "b1 = param_matrix[0,:,0]\n",
+    "b2 = param_matrix[1,:,0]\n",
+    "print(b1[0],b1.shape, b2[0], b2.shape)"
    ]
   },
   {
@@ -518,11 +532,10 @@
    "outputs": [],
    "source": [
     "fig,axes = plt.subplots(1,6, figsize=(50, 7.5))\n",
-    "cosphi=np.array(cosphi)\n",
     "for i in range(6):\n",
     "    # ax[0,1] = fig.add_subplot(1, 2, 1)\n",
-    "    axes[i].contourf(cosphi[:,1].reshape(12,6),cosphi[:,0].reshape(12,6),test[i,:,0].reshape(12,6), np.arange(-1., 1., .005), extend='both', cmap='seismic')\n",
-    "    # axes[i].contourf(cosphi[:,0].reshape(12,6),cosphi[:,1].reshape(12,6),test[i,:,0].reshape(6,12).T)\n",
+    "    axes[i].contourf(shift_func(cosphi[:,1].reshape(12,6)) , shift_func(cosphi[:,0].reshape(12,6)) , param_matrix[i,:,0].reshape(12,6) , np.arange(-1., 1., .005) , extend='both', cmap='seismic')\n",
+    "    # axes[i].contourf(shift_func(cosphi[:,0].reshape(12,6)),shift_func(cosphi[:,1].reshape(12,6)),param_matrix[i,:,0].reshape(6,12).T)\n",
     "plt.show()"
    ]
   },
@@ -535,6 +548,7 @@
     "import matplotlib as mpl\n",
     "from matplotlib import cm\n",
     "\n",
+    "#the following converts a cmap into plotly language \n",
     "magma_cmap = mpl.cm.get_cmap('magma')\n",
     "seismic_cmap = mpl.cm.get_cmap('seismic')\n",
     "\n",
@@ -570,14 +584,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "go_cos=shift_func(cosphi[:,0]).T;\n",
+    "print(go_cos.shape)\n",
+    "test=go_cos.tolist()\n",
+    "print(test[0], \"\\n\")\n",
+    "print(type(cosphi[:,0]), cosphi[:,0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
+    "\n",
+    "go_cos=shift_func(cosphi[:,0]).tolist();\n",
+    "go_phi=shift_func(cosphi[:,1]).tolist();\n",
     "\n",
     "fig = make_subplots(rows=1, cols=2,\n",
     "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
     "\n",
-    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.75, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
+    "fig.add_trace(go.Contour(z=param_matrix[0,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
+    "fig.add_trace(go.Contour(z=param_matrix[0,:,0], x=go_phi, y=go_cos, line_smoothing=0.75, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
@@ -607,13 +637,13 @@
     "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
     "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
     "\n",
-    "for i in range(len(test)):\n",
+    "for i in range(len(param_matrix)):\n",
     "    if i==1 or i==5:\n",
-    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
     "    else:\n",
-    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
