before renaming and rationalising

--- a/72_2D_MFPADs.ipynb
+++ b/72_2D_MFPADs.ipynb
@@ -143,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# all the 72 plots\n",
@@ -154,7 +152,8 @@
     "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
     "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
     "\n",
-    "fig = plt.figure(figsize=(50, 24),dpi=80) # figsize in inche by defauls: 1 in = 2.8 cm\n",
+    "# fig = plt.figure(figsize=(50, 24),dpi=80) # figsize in inches by defauls: 1 in = 2.8 cm\n",
+    "fig = plt.figure(figsize=(25, 12),dpi=40) # downsized\n",
     "for filename,group,i in zip(frame_srt,frame_srt,range(1,73)) :\n",
     "    counts_str = group[1][\"value\"].to_numpy()\n",
     "    ax = fig.add_subplot(6, 12, i)\n",
@@ -191,9 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# all the 72 plots: no borders & sharing axis\n",
@@ -202,7 +199,8 @@
     "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
     "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
     "\n",
-    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row') figsize in inche by defauls: 1 in = 2.8 cm\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row') #downsized\n",
     "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
     "\n",
     "for filename,group,ax in zip(frame_srt,frame_srt,axes.flatten()) :\n",
@@ -211,129 +209,6 @@
     "    ax.contourf(phi.reshape(200,100),ctheta.reshape(200,100),counts_str.reshape(200,100), levels=20, vmin=0.0001)\n",
     "    \n",
     "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# To convert in sphrerical coordinates!!\n",
-    "\n",
-    "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
-    "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
-    "counts_str = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # counts\n",
-    "\n",
-    "theta = np.arccos(ctheta)\n",
-    "phi_rad = phi * 3.14159265359/180.\n",
-    "\n",
-    "# convertion to spherical coordinates 1D vectors of shape (2000,1)\n",
-    "x = counts_str * np.sin(theta) * np.cos(phi_rad)\n",
-    "y = counts_str * np.sin(theta) * np.sin(phi_rad)\n",
-    "z_str = counts_str * ctheta\n",
-    "\n",
-    "# distance from the origin for the cmap\n",
-    "# remember do not use math, but np for fast operations on vectors\n",
-    "d_str = np.sqrt(x**2+y**2+z_str**2)\n",
-    "\n",
-    "X,Y = np.meshgrid(x, y, sparse=True)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "fig, ax = plt.subplots(1,2,subplot_kw={\"projection\": \"3d\"})\n",
-    "# alternative sintax\n",
-    "# fig = plt.figure()\n",
-    "# ax = fig.gca(projection='3d')\n",
-    "\n",
-    "ax = fig.add_subplot(1, 2, 1, projection='3d')\n",
-    "ax.scatter(x, y, z_str, c=d_str, cmap='viridis', alpha=0.75) # X,Y,Z 1D vectors -> everything ok\n",
-    "\n",
-    "# Z should be 2D\n",
-    "# ax = fig.add_subplot(1, 3, 2, projection='3d')\n",
-    "# ax.plot_wireframe(X,Y,Z)\n",
-    "\n",
-    "ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
-    "ax.plot_trisurf(x, y, z_str, antialiased=True)\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
-    "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
-    "counts_str = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # counts\n",
-    "\n",
-    "theta = np.arccos(ctheta)\n",
-    "phi_rad = phi * 3.14159265359/180.\n",
-    "\n",
-    "# convertion to spherical coordinates 1D vectors of shape (2000,1)\n",
-    "x = counts_str * np.sin(theta) * np.cos(phi_rad)\n",
-    "y = counts_str * np.sin(theta) * np.sin(phi_rad)\n",
-    "z_str = counts_str * ctheta\n",
-    "\n",
-    "# subsampling with slicing to reduce the computational effort\n",
-    "X,Y = np.meshgrid(x[0:-1:3], y[0:-1:3], sparse=True)\n",
-    "Z_1, Z_2 = np.meshgrid(x[0:-1:3], y[0:-1:3], sparse=True)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "fig, ax = plt.subplots(1,2, subplot_kw={\"projection\": \"3d\"}, figsize=(20,10))\n",
-    "\n",
-    "ax = fig.add_subplot(1, 2, 1, projection='3d')\n",
-    "ax.plot_surface(X,Y,Z_1)\n",
-    "\n",
-    "ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
-    "ax.plot_surface(X,Y,Z_2)\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# To convert in sphrerical coordinates!!\n",
-    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
-    "from matplotlib.colors import LightSource\n",
-    "\n",
-    "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
-    "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
-    "counts_str = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # counts\n",
-    "\n",
-    "theta_rad = np.arccos(ctheta)\n",
-    "phi_rad = phi*np.pi/180.\n",
-    "\n",
-    "# convertion to cartesian coordinates 1D vectors of shape (20000,1)\n",
-    "x = counts_str * np.sin(theta_rad) * np.cos(phi_rad)\n",
-    "y = counts_str * np.sin(theta_rad) * np.sin(phi_rad)\n",
-    "z_str = counts_str * ctheta\n",
-    "\n",
-    "verts = [list(zip(x, y, z_str))]\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = Axes3D(fig)\n",
-    "\n",
-    "# facecolor='g'\n",
-    "ax.add_collection3d(Poly3DCollection(verts, cmap=\"hot\", alpha=0.9))\n",
-    "ls = LightSource(azdeg=225.0, altdeg=45.0)\n",
-    "# ax.auto_scale_xyz(verts[:,0], verts[:,1], verts[:,2])\n",
-    "ax.set_xlim3d(x.min(), x.max())\n",
-    "ax.set_ylim3d(y.min(), y.max())\n",
-    "ax.set_zlim3d(z_str.min(), z_str.max())\n",
-    "\n",
     "plt.show()"
    ]
   },
