fixed plotting text on the multiple graph, actual number of the graph is displayed

--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -6,46 +6,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\r\n",
-    "import math\r\n",
-    "import uproot\r\n",
-    "import numpy as np\r\n",
-    "import pandas as pd\r\n",
-    "import pkgutil\r\n",
-    "import uproot_methods\r\n",
-    "\r\n",
-    "import matplotlib as mpl\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "from matplotlib.colors import LightSource\r\n",
-    "%matplotlib inline\r\n",
-    "\r\n",
-    "import mplhep as hep\r\n",
-    "from mpl_toolkits.mplot3d import Axes3D\r\n",
-    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\r\n",
-    "\r\n",
-    "import max_functions as mf\r\n",
-    "\r\n",
-    "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\r\n",
-    "\r\n",
-    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\r\n",
-    "all_files = glob.glob(path + \"/*.dat\")\r\n",
-    "\r\n",
-    "li = []\r\n",
-    "colnames=[\"phi\",\"cos(theta)\",\"value\"] \r\n",
-    "\r\n",
-    "# how to load multiple files http://jonathansoma.com/lede/foundations-2017/classes/working-with-many-files/class/\r\n",
-    "for filename in all_files:\r\n",
-    "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \r\n",
-    "    # or delim_whitespace=True, it is faste\r\n",
-    "    # r\"\\s+\" is a regex (regular expression)\r\n",
-    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding a column with the file name\r\n",
-    "    df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\r\n",
-    "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\r\n",
-    "    li.append(df) # a unique DataFrame\r\n",
-    "\r\n",
-    "frame = pd.concat(li, axis=0)\r\n",
-    "frame_srt=frame.groupby(\"filename\")\r\n"
+    "import glob\n",
+    "import math\n",
+    "import uproot\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pkgutil\n",
+    "import uproot_methods\n",
+    "\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import LightSource\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import mplhep as hep\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
+    "\n",
+    "import max_functions as mf\n",
+    "\n",
+    "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
+    "\n",
+    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=11.5eV' # use your path\n",
+    "all_files = glob.glob(path + \"/*.dat\")\n",
+    "\n",
+    "li = []\n",
+    "cosphi_th = []\n",
+    "colnames=[\"phi\",\"cos(theta)\",\"value\"] \n",
+    "\n",
+    "# how to load multiple files http://jonathansoma.com/lede/foundations-2017/classes/working-with-many-files/class/\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \n",
+    "    # or delim_whitespace=True, it is faste\n",
+    "    # r\"\\s+\" is a regex (regular expression)\n",
+    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding a column with the file name\n",
+    "    df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\n",
+    "    cosphi_th.append((int(df[\"filename\"].str.split(\"_\")[0][0]),int(df[\"filename\"].str.split(\"_\")[0][1])))\n",
+    "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\n",
+    "    li.append(df) # a unique DataFrame\n",
+    "\n",
+    "cosphi_th=np.array(cosphi_th)\n",
+    "frame = pd.concat(li, axis=0)\n",
+    "frame_srt=frame.groupby(\"filename\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -154,11 +164,11 @@
     "\n",
     "# fig = plt.figure(figsize=(50, 24),dpi=80) # figsize in inches by defauls: 1 in = 2.8 cm\n",
     "fig = plt.figure(figsize=(25, 12),dpi=40) # downsized\n",
-    "for filename,group,i in zip(frame_srt,frame_srt,range(1,73)) :\n",
+    "for filename,group,i in zip(frame_srt,frame_srt,range(72)):\n",
     "    counts_str = group[1][\"value\"].to_numpy()\n",
-    "    ax = fig.add_subplot(6, 12, i)\n",
+    "    ax = fig.add_subplot(6, 12, i+1)\n",
     "    ax.contourf(phi.reshape(200,100),ctheta.reshape(200,100),counts_str.reshape(200,100), levels=20, vmin=0.0001)\n",
-    "    ax.text(i, 1+i//12, i, ha=\"center\", va=\"center\", color=\"red\")\n",
+    "    ax.text(i+1, i//12+1, cosphi_th[i], ha=\"center\", va=\"center\", color=\"red\")\n",
     "\n",
     "fig.tight_layout()\n",
     "# plt.show()"
