displays 11.5eV, introduced the actual cosphi of the file from philipp

--- a/3D_MFPADs_plotly.ipynb
+++ b/3D_MFPADs_plotly.ipynb
@@ -28,7 +28,8 @@
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\r\n",
     "\r\n",
     "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\r\n",
-    "all_files = glob.glob(path + \"/*.dat\")\r\n",
+    "all_files = glob.glob(pat\n",
+    "cosphi_th = []h + \"/*.dat\")\r\n",
     "\r\n",
     "li = []\r\n",
     "colnames=[\"phi\",\"cos(theta)\",\"value\"] \r\n",
@@ -39,9 +40,11 @@
     "    # or delim_whitespace=True, it is faste\r\n",
     "    # r\"\\s+\" is a regex (regular expression)\r\n",
     "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding a column with the file name\r\n",
-    "    df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\r\n",
+    "    df[\"filename\"]=df[\"filename\"].str.repl\n",
+    "    cosphi_th.append((int(df[\"filename\"].str.split(\"_\")[0][0]),int(df[\"filename\"].str.split(\"_\")[0][1])))ace(\" \",\"\") # corrects for spaces\r\n",
     "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\r\n",
-    "    li.append(df) # a unique DataFrame\r\n",
+    "    \n",
+    "cosphi_th=np.array(cosphi_th)li.append(df) # a unique DataFrame\r\n",
     "\r\n",
     "frame = pd.concat(li, axis=0)\r\n",
     "frame_srt=frame.groupby(\"filename\")\r\n",
