--- a/3D_MFPADs_plotly_triangualtion.ipynb
+++ b/3D_MFPADs_plotly_triangualtion.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
-    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\n",
+    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=11.5eV' # use your path\n",
     "all_files = glob.glob(path + \"/*.dat\")\n",
     "\n",
     "li = []\n",
@@ -104,40 +104,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TRIANGULATION\n",
-    "def triangulation_edges(points, faces, linewidth=1.5):\n",
-    "    points = np.asarray(points)\n",
-    "    faces = np.asarray(faces)\n",
-    "    d = points.shape[-1]\n",
-    "    \n",
-    "    if d not in [2, 3] or faces.shape[-1] != 3:\n",
-    "        raise ValueError(\"your data are not associated to a 2d or 3d  triangulation\\n\\\n",
-    "                         points should be an array of ndim=2 or 3 and faces of ndim=3\")\n",
-    "    \n",
-    "    Xe = []\n",
-    "    Ye = []\n",
-    "    if d == 3:\n",
-    "        Ze = []\n",
-    "    for T in tri_vertices:\n",
-    "        Xe += [T[k%3][0] for k in range(4)] + [None]\n",
-    "        Ye += [T[k%3][1] for k in range(4)] + [None]\n",
-    "        if d == 3: \n",
-    "            Ze += [T[k%3][2] for k in range(4)] + [None] \n",
-    "    if d == 2:\n",
-    "        return  go.Scatter(x=Xe,\n",
-    "                           y=Ye,\n",
-    "                           mode='lines',\n",
-    "                           name='edges',\n",
-    "                           line_color ='rgb(50,50,50)', \n",
-    "                           line_width=linewidth\n",
-    "                            )\n",
-    "    else:\n",
-    "        return go.Scatter3d(x=Xe,\n",
-    "                           y=Ye,\n",
-    "                           z=Ze,\n",
-    "                           mode='lines',\n",
-    "                           name='edges',\n",
-    "                           line_color ='rgb(50,50,50)', \n",
+    "#TRIANGULATION\r\n",
+    "def triangulation_edges(points, faces, linewidth=1.5):\r\n",
+    "    points = np.asarray(points)\r\n",
+    "    faces = np.asarray(faces)\r\n",
+    "    d = points.shape[-1]\r\n",
+    "    \r\n",
+    "    if d not in [2, 3] or faces.shape[-1] != 3:\r\n",
+    "        raise ValueError(\"your data are not associated to a 2d or 3d  triangulation\\n\\\r\n",
+    "                         points should be an array of ndim=2 or 3 and faces of ndim=3\")\r\n",
+    "    \r\n",
+    "    tri_vertices = points[faces]\r\n",
+    "    Xe = []\r\n",
+    "    Ye = []\r\n",
+    "    if d == 3:\r\n",
+    "        Ze = []\r\n",
+    "    for T in tri_vertices:\r\n",
+    "        Xe += [T[k%3][0] for k in range(4)] + [None]\r\n",
+    "        Ye += [T[k%3][1] for k in range(4)] + [None]\r\n",
+    "        if d == 3: \r\n",
+    "            Ze += [T[k%3][2] for k in range(4)] + [None] \r\n",
+    "    if d == 2:\r\n",
+    "        return  go.Scatter(x=Xe,\r\n",
+    "                           y=Ye,\r\n",
+    "                           mode='lines',\r\n",
+    "                           name='edges',\r\n",
+    "                           line_color ='rgb(50,50,50)', \r\n",
+    "                           line_width=linewidth\r\n",
+    "                            )\r\n",
+    "    else:\r\n",
+    "        return go.Scatter3d(x=Xe,\r\n",
+    "                           y=Ye,\r\n",
+    "                           z=Ze,\r\n",
+    "                           mode='lines',\r\n",
+    "                           name='edges',\r\n",
+    "                           line_color ='rgb(50,50,50)', \r\n",
     "                           line_width=linewidth)"
    ]
   },
@@ -281,6 +282,15 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
+    }
+   },
+   "name": "Python 3.8.5 64-bit ('base': conda)"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -291,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
