fixing the cosphi, plotting the right MFPAD cos/phi,introduced the right meshing with PyntCloud

--- a/3D_MFPADs_experiment.ipynb
+++ b/3D_MFPADs_experiment.ipynb
@@ -116,8 +116,182 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.contourf(cosphi[:,1].reshape(12,6),cosphi[:,0].reshape(12,6),MFPAD_RCL[0])\n",
-    "MFPAD_RCL[0].T.shape"
+    "cosn=np.array([col[0] for col in cosphi]); #list\n",
+    "phin=np.array([col[1] for col in cosphi]); #list\n",
+    "cosM=(MFPAD_xy[0][1][1:] + MFPAD_xy[0][1][:-1])/2\n",
+    "phiM=(MFPAD_xy[0][0][1:] + MFPAD_xy[0][0][:-1])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,3, figsize=(20, 6.5),sharex='col')\n",
+    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
+    "\n",
+    "ax[0].contourf(phin.reshape(12,6),cosn.reshape(12,6),MFPAD_RCL[0])\n",
+    "ax[1].contourf(phiM,cosM,MFPAD_RCL[0].T) #has to be transposed becasue how it has been defined in lmf2root\n",
+    "ax[2].contourf(MFPAD_RCL[0]) #this too\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "MFPAD_RCL[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "#cartesian product\n",
+    "phicos_MFPAD = np.array(list(itertools.product(phiM, cosM)))\n",
+    "cosphi_MFPAD = np.array(list(itertools.product(cosM, phiM)))\n",
+    "# print(phicos_MFPAD,cosphi_MFPAD)\n",
+    "theta_rad = np.arccos([col[0] for col in cosphi_MFPAD])\n",
+    "phi_rad = np.array([col[1] for col in cosphi_MFPAD]) * np.pi/180.\n",
+    "counts=MFPAD_RCR[0].reshape(-1)\n",
+    "x = counts * np.sin(theta_rad) * np.cos(phi_rad)\n",
+    "X = x.reshape(12,6)\n",
+    "y = counts * np.sin(theta_rad) * np.sin(phi_rad)\n",
+    "Y = y.reshape(12,6)\n",
+    "z = counts * np.cos(theta_rad)\n",
+    "Z = z.reshape(12,6)\n",
+    "\n",
+    "d = np.sqrt(x**2+y**2+z**2)\n",
+    "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go scatters do not provide a legend\n",
+    "fig = go.Figure(data=[go.Scatter3d(x=x, y=y, z=z,\n",
+    "                    mode='markers',\n",
+    "                    marker=dict(\n",
+    "                        size=5,\n",
+    "                        color=d,            # set color to an array/list of desired values\n",
+    "                        colorscale='Viridis',   # choose a colorscale\n",
+    "                        opacity=1.,\n",
+    "                        showscale=True          # to show the legend according to the color\n",
+    "                   )\n",
+    "                )])\n",
+    "\n",
+    "fig.update_layout(title=\"TFMeOx MFPADs theory scattered\",\n",
+    "                  width=500,\n",
+    "                  height=500,\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                #   margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import triangulation as tr\n",
+    "from scipy.spatial import Delaunay\n",
+    "points2d_trace = go.Scatter(x=x, y=y, mode='markers', marker_color='red', marker_size=6)\n",
+    "point_trace= go.Scatter(x=x, y=y, \n",
+    "                         mode='markers',\n",
+    "                         name='points',\n",
+    "                         marker_color='red',\n",
+    "                         marker_size=6)\n",
+    "pts2d = np.array([x,y]).T\n",
+    "tri = Delaunay(pts2d)\n",
+    "delaunay_tri = tr.triangulation_edges(pts2d, tri.simplices, linewidth=1)\n",
+    "fig2 = go.Figure(data=[delaunay_tri, point_trace])\n",
+    "fig2.update_layout(width=500, height=500);\n",
+    "fig2.show()\n",
+    "\n",
+    "i, j, k = tri.simplices.T\n",
+    "my_mesh3d = go.Mesh3d(\n",
+    "    x = x,\n",
+    "    y = y,\n",
+    "    z = z,\n",
+    "    i=i, j=j, k=k,\n",
+    "    colorscale='deep_r',\n",
+    "    colorbar_thickness=25,\n",
+    "    intensity=z, \n",
+    "    flatshading=True\n",
+    ")\n",
+    "\n",
+    "my_layout = dict(width=800, height=600,\n",
+    "                 scene_camera_eye=dict(x=1.5, y=1.5, z=1), \n",
+    "                 scene_aspectratio=dict(x=1.5, y=1.5, z=1))\n",
+    "\n",
+    "points3d = np.array([x,y,z]).T\n",
+    "\n",
+    "delaun_tri3d  = tr.triangulation_edges(points3d, tri.simplices)\n",
+    "\n",
+    "fig3d = go.Figure(data=[my_mesh3d, delaun_tri3d])\n",
+    "\n",
+    "fig3d.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyntcloud import PyntCloud, structures\n",
+    "temp = pd.DataFrame(np.hstack((x[:,None], y[:,None], z[:,None])))\n",
+    "temp.columns = [\"x\", \"y\", \"z\"]\n",
+    "sph = PyntCloud(temp)\n",
+    "x,  y,  z = sph.points[\"x\"], sph.points[\"y\"], sph.points[\"z\"]\n",
+    "pts = sph.points[['x', 'y', 'z']]\n",
+    "delaun = structures.Delaunay3D(pts)\n",
+    "\n",
+    "delaun.compute()\n",
+    "mesh = delaun.get_mesh()\n",
+    "tri= mesh[['v1', 'v2', 'v3']].values\n",
+    "I, J, K = tri.T\n",
+    "\n",
+    "fig1 = go.Figure(go.Mesh3d(x=x, y=y, z=z, \n",
+    "                           i=I, j=J, k=K, \n",
+    "                           intensity=z,\n",
+    "                           colorscale=\"Viridis\",\n",
+    "                           colorbar_len=0.75,\n",
+    "                           flatshading=True,\n",
+    "                           lighting=dict(ambient=0.5,\n",
+    "                                         diffuse=1,\n",
+    "                                         fresnel=4,        \n",
+    "                                         specular=0.5,\n",
+    "                                         roughness=0.05,\n",
+    "                                         facenormalsepsilon=0,\n",
+    "                                         vertexnormalsepsilon=0),\n",
+    "                          lightposition=dict(x=100,\n",
+    "                                             y=100,\n",
+    "                                            z=1000)))\n",
+    "fig1.update_layout(width=800, height=800)\n",
+    "fig1.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "\n",
+    "fig = go.Figure(data=[go.Surface(z=Z, surfacecolor=d_matrix)])\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\n",
+    "                # width=500,\n",
+    "                # height=500,\n",
+    "                # margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                  margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -133,7 +307,7 @@
     "\n",
     "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
     "for i,ax in zip(range(72),axes.T.flatten()) :\n",
-    "    ax.contourf(cosphi[:,1].reshape(12,6),cosphi[:,0].reshape(12,6),MFPAD_RCL[i])\n",
+    "    ax.contourf(phin.reshape(12,6),cosn.reshape(12,6),MFPAD_RCL[i])\n",
     "    \n",
     "fig.tight_layout()\n",
     "plt.show()"
