param_matrix transformation to numpy is critcal

--- a/b1_map_CH9.ipynb
+++ b/b1_map_CH9.ipynb
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_matrix=np.array(param_matrix) #numpy\n",
+    "param_matrix=np.array(param_matrix) #numpy tranformation!!!\n",
     "b1 = param_matrix[0,:,0]\n",
     "b2 = param_matrix[1,:,0]\n",
     "print(b1[0],b1.shape, b2[0], b2.shape)"
